--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ignews",
   "private": true,
   "scripts": {
+    "test": "jest --coverage",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -22,11 +23,19 @@
     "stripe": "^8.188.0"
   },
   "devDependencies": {
+    "@testing-library/dom": "^8.11.1",
+    "@testing-library/jest-dom": "^5.15.1",
+    "@testing-library/react": "^12.1.2",
     "@types/node": "^16.11.7",
     "@types/prismic-dom": "^2.1.1",
     "@types/react": "^17.0.35",
+    "babel-jest": "^27.3.1",
     "eslint": "7",
     "eslint-config-next": "12.0.4",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.3.1",
+    "jest-dom": "^4.0.0",
+    "ts-jest": "^27.0.7",
     "typescript": "^4.4.4"
   }
 }
